# pedro-dev-portfolio

./: .gitignore  README.md
backend/: alembic.ini  database.py  main.py  pyproject.toml  requirements.txt  script.md
backend/migrations/: env.py
backend/migrations/versions/: e49f32400005_create_initial_tables.py
backend/src/Category/: repository.py  routes.py  schema.py  service.py
backend/src/Certificate/: repository.py  routes.py  schema.py  service.py
backend/src/Experience/: repository.py  routes.py  schema.py  service.py
backend/src/ExperienceTools/: repository.py  routes.py  schema.py  service.py
backend/src/Profile/: repository.py  routes.py  schema.py  service.py
backend/src/ProfileTools/: repository.py  routes.py  schema.py  service.py
backend/src/Project/: repository.py  routes.py  schema.py  service.py
backend/src/ProjectTools/: repository.py  routes.py  schema.py  service.py
backend/src/Testimonial/: repository.py  routes.py  schema.py  service.py
backend/src/Tools/: repository.py  routes.py  schema.py  service.py
backend/src/models/: base.py  category.py  certificate.py  experience.py  experience_tools.py  profile.py  profile_tools.py  project.py  project_tools.py  testimonial.py  tools.py
